[gd_scene load_steps=7 format=3 uid="uid://cyc8r03m10vjf"]

[ext_resource type="Script" path="res://main.gd" id="1_wvaje"]
[ext_resource type="PackedScene" uid="uid://db4cnemqigasj" path="res://mob.tscn" id="2_0tta2"]
[ext_resource type="Texture2D" uid="uid://bbm6mh3la7jew" path="res://art/basicGround.png" id="2_chaxb"]
[ext_resource type="PackedScene" uid="uid://cos7gmef4phv5" path="res://Player.tscn" id="3_etppv"]
[ext_resource type="PackedScene" uid="uid://sylva27due6h" path="res://hud.tscn" id="5_qkw6q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cklb6"]

[node name="main" type="Node" groups=["SpawnLocations"]]
script = ExtResource("1_wvaje")
mob_scene = ExtResource("2_0tta2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1366.0
offset_bottom = 768.0
color = Color(0.686275, 1, 1, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(666.5, 737)
scale = Vector2(21, 1)
texture = ExtResource("2_chaxb")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Player" parent="." instance=ExtResource("3_etppv")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(641, 674)

[node name="EnemySpawn1" type="Marker2D" parent="." groups=["SpawnLoactions"]]
position = Vector2(339, -29)

[node name="EnemySpawn2" type="Marker2D" parent="." groups=["SpawnLoactions"]]
position = Vector2(580, -12)

[node name="EnemySpawn3" type="Marker2D" parent="." groups=["SpawnLoactions"]]
position = Vector2(749, -32)

[node name="EnemySpawn4" type="Marker2D" parent="." groups=["SpawnLoactions"]]
position = Vector2(997, -19)

[node name="HUD" parent="." instance=ExtResource("5_qkw6q")]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(400, 780)
scale = Vector2(100, 1)
shape = SubResource("RectangleShape2D_cklb6")

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="startgame" from="HUD" to="." method="start"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
